# SoapyHarogic

./: CMakeLists.txt  HarogicDevice.cpp  HarogicDevice.hpp  README.md  SoapyHarogic.pc.in  performance_mode.sh
.github/workflows/: build-packages.yml
cmake/: FindLibHTRA.cmake
examples/: harogic_simple_rfexporer.grc
